# Desktop-Lyrics

./: README.md  main.py  pyproject.toml  setup.cfg
src/: Lyrics.py  main.py
