[metadata]
name = Desktop-Lyrics-serhank
version = 1.1
author = serhank
author_email = serhankonukluk@gmail.com
description = A Desktop Lyrics application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/serhankk/Desktop-Lyrics
project_urls =
    Bug Tracker = https://github.com/serhankk/Desktop-Lyrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
